--- a/_amendments/D14A1.md
+++ b/_amendments/D14A1.md
@@ -3,4 +3,14 @@ motion_title: Regulating the distribution of campaign literature at Conference
 amendment_number: 1
 ---
 
-In sentence 9, add, “except where a judicial review or other authority, say, has ruled there to be such a conflict, to all legal intents and purposes”.
+Delete:
+ 
+H14.3 Members wishing to distribute campaign literature at
+Conference may do so via stalls booked for this purpose, and to attendees at fringe events with permission from the
+event organiser.
+
+Replace with :
+H14.3 Members wishing to distribute campaign literature at
+Conference may do so via a single stall which will be
+provided for this purpose, and to attendees at fringe events
+with permission from the event organiser.
