amendments 2: tuesday boogaloo

--- a/_amendments/D16A03.md
+++ b/_amendments/D16A03.md
@@ -3,5 +3,7 @@ motion_title: Changes to GPEx
 amendment_number: 3
 # Looking for the amendment status? Update it directly from the motion page!
 ---
-Add “Disability Spokesperson” to the list “Currently
-Spokesperson posts are”
+Additional point after point 3:
+
+International Committee members will elect one committee member (or two as a job share) to be the first point of contact for international work within the party and internationally. They will be known as the
+International Convenor(s). The International Convenor(s) will have responsibility and delegated authority to liaise with international Green Parties and organisations to further develop relationships with them, in particular with the European Green Party, the Global Greens Network and our sister parties in the UK. The international convenor will report to the specified member of GPEx as set out in 7.1v
