--- a/_amendments/C02A01.md
+++ b/_amendments/C02A01.md
@@ -11,12 +11,18 @@ Replace
 with
 “business and people”.
 
+SOC note: This amendment was taken in parts, text below was defeated as "Amendment 1, Part 2"
+{:.alert .alert-danger}
+
 Insert a new first bullet point in second list before
+{:.alert .alert-danger}
 
 “Driving less” which reads:
 “Reduce unnecessary trade, construction and plastic manufacturing”
+{:.alert .alert-danger}
 
 Delete
 “,”
 at the end of
 “Driving less,”
+{:.alert .alert-danger}
