--- a/_amendments/B01A2A.md
+++ b/_amendments/B01A2A.md
@@ -1,6 +1,7 @@
 ---
 motion_title: Land Use Voting Paper
 amendment_number: 2a
+status: defeated
 # Looking for the amendment status? Update it directly from the motion page!
 ---
 
