--- a/_amendments/C01A1.md
+++ b/_amendments/C01A1.md
@@ -1,6 +1,7 @@
 ---
 motion_title: Amalgamated IPP Statements
 amendment_number: 1
+status: passed
 # Looking for the amendment status? Update it directly from the motion page!
 ---
 
