--- a/_amendments/C02A3.md
+++ b/_amendments/C02A3.md
@@ -1,6 +1,7 @@
 ---
 motion_title: The UK’s relationship with the European Union
 amendment_number: 3
+status: passed
 # Looking for the amendment status? Update it directly from the motion page!
 ---
 
