--- a/_amendments/B01A3.md
+++ b/_amendments/B01A3.md
@@ -1,6 +1,7 @@
 ---
 motion_title: Land Use Voting Paper
 amendment_number: 3
+status: passed
 # Looking for the amendment status? Update it directly from the motion page!
 ---
 
